--- a/templates/front/index.html.twig
+++ b/templates/front/index.html.twig
@@ -4,9 +4,8 @@
 
 {% block body %}
     <header class="py-5 bg-primary text-center">
-        <h1>Notre forum</h1>
+        <h1>Le blog</h1>
         <p class="lead">{{ subtitle }}</p>
         <a href="{{ path('article') }}" class="btn btn-dark text-white ">article</a>
-        <a href="{{ path('rules') }}" class="btn btn-dark text-white ">Rules</a>
     </header>
 {% endblock %}
