--- a/templates/front/add.html.twig
+++ b/templates/front/add.html.twig
@@ -5,8 +5,8 @@
 {% block body %}
     <header class="py-5 bg-primary text-center">
         <h1>Add article</h1>
+        <p class="lead">{{ subtitle }}</p>
         <a href="{{ path('home') }}" class="btn btn-dark text-white ">Homepage</a>
-        <a href="{{ path('rules') }}" class="btn btn-dark text-white ">Rules</a>
         <a href="{{ path('article') }}" class="btn btn-dark text-white ">article</a>
     </header>
         <h2>Le formulaire<h2>
