--- a/templates/front/addArticle.html.twig
+++ b/templates/front/addArticle.html.twig
@@ -3,5 +3,6 @@
 {% block title %} Add article{% endblock %}
 
 {% block body %}
-        <h2>Le formulaire<h2>
+        <h2 class='my-3'>Ajouter un article<h2>
+        {{ form(form) }}
 {% endblock %}
