--- a/templates/front/index.html.twig
+++ b/templates/front/index.html.twig
@@ -13,7 +13,7 @@
             <div class="card-body">
                 <h5 class="card-title">{{article.title}}</h5>
                 <p class="card-text">{{article.content}}</p>
-                <a href="{{ path('article') }}" class="btn btn-dark text-white">Voir</a>
+                <a href="{{ path('article', {id: article.id}) }}" class="btn btn-dark text-white">Voir</a>
             </div>
         </div>
     {% endfor %}
